--- a/docker/riemann.config
+++ b/docker/riemann.config
@@ -20,9 +20,14 @@
 ; Expire old events from the index every 5 seconds.
 (periodically-expire 5)
 
+(history/history {:connect "http://localhost:9200" 
+                  :url "_search"
+                  :interval 600
+                  :query "/tmp/elasticsearch.json"}
+
 (let [index (default :ttl 120 (index))]
   (streams
-    (fn [e] (info (history/history e)))))
+    (fn [e] (info @history/history-data))))
 
 (comment (let [index (index)]
   ; Inbound events will be passed to these streams:
