Key from epoch, etc.

--- a/docker/riemann.config
+++ b/docker/riemann.config
@@ -29,7 +29,11 @@
 
 (let [index (default :ttl 120 (index))]
   (streams
-    (fn [e] (info (history/get-history-data :requests-per-day-hour)))))
+    (fn [e] 
+      (info
+        (history/get-history-data
+          :requests-per-day-hour
+          (history/generate-key-from-epoch (:time e)))))))
 
 (comment (let [index (index)]
   ; Inbound events will be passed to these streams:
