--- a/docker/local-dev-riemann.config
+++ b/docker/local-dev-riemann.config
@@ -22,20 +22,20 @@
 
 (def request-history
   (history/history {:name :requests-per-day-hour
-                    :connect "http://localhost:9200" 
+                    :connect "http://elasticsearch:9200"
                     :url "_search"
                     :interval 600
-                    :query "/tmp/elasticsearch.json"}))
+                    :query "/etc/riemann-history/elasticsearch.json"}))
 
 (let [index (default :ttl 120 (index))]
   (streams
-    (fn [e] 
+    (fn [e]
       (info
         (history/get-history-data
           :requests-per-day-hour
           (history/generate-key-from-epoch (:time e)))))))
 
-(comment (let [index (index)]
+(comment (let [index (index)])
   ; Inbound events will be passed to these streams:
   (streams
     (default :ttl 60
@@ -44,5 +44,5 @@
 
       ; Log expired events.
       (expired
-        (fn [event] (info "expired" event)))))))
+        (fn [event] (info "expired" event))))))
 
